---------------------------------------------------------------------------------------------------
Version: 4.1.6
Date: 2021.01.xx
  Bugfixes:
    - Fixed TechGen:setLocName() / setLocDesc() ignoring keys and always adding "Technology-name."
    - Fix locale crashes with types added in latest experimental
---------------------------------------------------------------------------------------------------
Version: 4.1.5
Date: 2021.01.08
  Bugfixes:
    - Fixed an control error related to shortcuts
---------------------------------------------------------------------------------------------------
Version: 4.1.4
Date: 2021.01.04
  Bugfixes:
    - Fixed that omni.lib.replace_prerequisite() did not check if the tech already required 
    -   - the new prerequisite
---------------------------------------------------------------------------------------------------
Version: 4.1.3
Date: 2021.01.03
  Bugfixes:
    - Fixed that BuildGen:import() overwrote the result amount to 1
    - Fixed that BuildGen:setOnAnimation() was pointing to off_animation
    - Fixed that InsertGen:setAnimation() created non-rotateable inserter platforms
---------------------------------------------------------------------------------------------------
Version: 4.1.2
Date: 2020.12.23
  Bugfixes:
    - Fixed that certain functions compared tables with "==" and caused unwanted sideeffects
---------------------------------------------------------------------------------------------------
Version: 4.1.1
Date: 2020.12.14
  Features:
    - Added Krastorio 2 support
  Bugfixes:
    - Fixed that setDurabilityDesc() was not setting durability_description_value
    - Fixed that recipe & item order were overwritten on entity import
---------------------------------------------------------------------------------------------------
Version: 4.1.0
Date: 2020.11.26
  Info:
    - Updated for Factorio version 1.1.0
---------------------------------------------------------------------------------------------------