@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.6
 Date: 2021.01.xx
+  Features:
+    - Add BuildGen:setFuelCategories(), replaces setFuelCategory for entities
+  Changes:
+    - fuel_categories (instead of fuel_category) is now used for all entities 
   Bugfixes:
     - Fixed TechGen:setLocName() / setLocDesc() ignoring keys and always adding "Technology-name."
     - Fix locale crashes with types added in latest experimental
